[gd_scene load_steps=11 format=2]

[ext_resource path="res://minigames/endlessrunner/ui/HUDMER.tscn" type="PackedScene" id=1]
[ext_resource path="res://minigames/endlessrunner/environment/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://minigames/endlessrunner/environment/Foreground.tscn" type="PackedScene" id=3]
[ext_resource path="res://minigames/endlessrunner/characters/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/audio/coin5_ER.ogg" type="AudioStream" id=5]
[ext_resource path="res://minigames/endlessrunner/levels/Level0MER.gd" type="Script" id=6]
[ext_resource path="res://minigames/endlessrunner/collectibles/Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://minigames/endlessrunner/characters/enemy/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://minigames/endlessrunner/mathengine/Operation.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/hurt2_ER.ogg" type="AudioStream" id=10]

[node name="Level0MER" type="Node2D"]
script = ExtResource( 6 )
enemy_scene = ExtResource( 8 )
collectible_scene = ExtResource( 7 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="Background" parent="BackgroundLayer" instance=ExtResource( 2 )]

[node name="ForegroundLayer" type="CanvasLayer" parent="."]

[node name="Foreground" parent="ForegroundLayer" instance=ExtResource( 3 )]

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="HUDMER" parent="HUDLayer" instance=ExtResource( 1 )]

[node name="GameLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Player" parent="GameLayer" instance=ExtResource( 4 )]
position = Vector2( 126, 441 )

[node name="EnemiesTimer" type="Timer" parent="GameLayer"]
wait_time = 1.85

[node name="EnemiesSpawningPoint" type="Position2D" parent="GameLayer"]
position = Vector2( 1123, 472 )

[node name="CoinsTimer" type="Timer" parent="GameLayer"]
wait_time = 0.95

[node name="CoinsSpawningPoint" type="Position2D" parent="GameLayer"]
position = Vector2( 1125, 470 )

[node name="PickUpSound" type="AudioStreamPlayer" parent="GameLayer"]
stream = ExtResource( 5 )

[node name="PlayerHurt" type="AudioStreamPlayer" parent="GameLayer"]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="GameLayer"]

[node name="Operation" parent="GameLayer" instance=ExtResource( 9 )]
visible = false

[node name="DifficultyTimer" type="Timer" parent="GameLayer"]
wait_time = 5.0

[connection signal="timeout" from="GameLayer/EnemiesTimer" to="." method="_on_EnemiesTimer_timeout"]
[connection signal="timeout" from="GameLayer/CoinsTimer" to="." method="_on_CoinsTimer_timeout"]
[connection signal="timeout" from="GameLayer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GameLayer/DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
